--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
     "mapbox-gl": "^3.15.0",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17"
   },
